[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/menu/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=2]
[ext_resource path="res://src/menu/AudioSettings.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/gui/EBGaramond-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/gui/Roboto-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="Settings" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
margin_left = 520.0
margin_right = 640.0
margin_bottom = 80.0
text = "Back"

[node name="AudioSettings" parent="." instance=ExtResource( 3 )]
margin_left = 220.0
margin_top = 80.0
margin_right = 404.0
margin_bottom = 180.0

[node name="TutorialSettings" type="HBoxContainer" parent="."]
margin_left = 240.0
margin_top = 200.0
margin_right = 400.0
margin_bottom = 240.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="TutorialSettings"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
text = "Tutorial"
align = 1
valign = 1

[node name="TutorialToggle" type="CheckButton" parent="TutorialSettings"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 40.0
pressed = true

[node name="AimSettings" type="HBoxContainer" parent="."]
margin_left = 240.0
margin_top = 260.0
margin_right = 400.0
margin_bottom = 300.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="AimSettings"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
text = "Aim Preview"
align = 1
valign = 1

[node name="AimToggle" type="CheckButton" parent="AimSettings"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 40.0
pressed = true

[node name="About" type="Button" parent="."]
margin_right = 120.0
margin_bottom = 80.0
text = "About"

[node name="AboutPanel" type="Panel" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0

[node name="Title" type="Label" parent="AboutPanel"]
margin_top = 20.0
margin_right = 640.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "FLYING GENERAL"
align = 1
valign = 1

[node name="Credits" type="Label" parent="AboutPanel"]
margin_left = 120.0
margin_top = 80.0
margin_right = 520.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 2 )
text = "by Jack Anderson

Additional Public Domain/CC0 Assets sourced from:
pixabay.com
unsplash.com
kenney.nl
opengameart.org
freesound.org"
align = 1
valign = 1
autowrap = true

[node name="Copyright" type="Label" parent="AboutPanel"]
margin_left = 380.0
margin_top = 280.0
margin_right = 620.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 2 )
text = "v. 1.0.0 -- February 14, 2023
Copyright © 2023 Jack Anderson"
align = 2
valign = 1
autowrap = true

[node name="PrivacyPanel" type="Panel" parent="AboutPanel"]
visible = false
margin_right = 640.0
margin_bottom = 360.0

[node name="Privacy" type="RichTextLabel" parent="AboutPanel/PrivacyPanel"]
margin_left = 20.0
margin_top = 40.0
margin_right = 620.0
margin_bottom = 280.0
text = "Privacy Policy

One Three Software built the NPuzzle app as a Freemium app. This SERVICE is provided by One Three Software at no cost and is intended for use as is.

This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.

If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at NPuzzle unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to None. The information that we request will be retained by us and used as described in this privacy policy.

The app does use third-party services that may collect information used to identify you.

Link to the privacy policy of third-party service providers used by the app

    Google Play Services
    Godot 

Log Data

We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

We may employ third-party companies and individuals due to the following reasons:

    To facilitate our Service;
    To provide the Service on our behalf;
    To perform Service-related services; or
    To assist us in analyzing how our Service is used. 

We want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13 years of age. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do the necessary actions.

Changes to This Privacy Policy

We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2023-01-28

Contact Us

If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at onethreesoftware@gmail.com. "

[node name="Privacy" type="Button" parent="AboutPanel"]
margin_left = 20.0
margin_top = 300.0
margin_right = 140.0
margin_bottom = 340.0
toggle_mode = true
text = "Privacy Policy"

[node name="Back" type="Button" parent="AboutPanel"]
margin_right = 120.0
margin_bottom = 80.0
text = "Back"

[connection signal="button_up" from="Back" to="." method="_on_Back_button_up"]
[connection signal="toggled" from="TutorialSettings/TutorialToggle" to="." method="_on_TutorialToggle_toggled"]
[connection signal="toggled" from="AimSettings/AimToggle" to="." method="_on_AimToggle_toggled"]
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
[connection signal="toggled" from="AboutPanel/Privacy" to="." method="_on_Privacy_toggled"]
[connection signal="pressed" from="AboutPanel/Back" to="." method="_on_Back_pressed"]
